--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@
 }
 
 body {
-    background-color: #353535;
+    background-image: url("/images/donuts.jpeg");
+    background-size: cover;
     color: #ffffffde
 }
 
